--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2479,6 +2479,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here we have met the CEO's requirements when it comes to specifity at 81%. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Calculating the F1 Score"
    ]
   },
