--- a/Lead Score Case Study.ipynb
+++ b/Lead Score Case Study.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fa355905",
+   "metadata": {},
+   "source": [
+    "# -----------------------------------deprecated--------------------------------"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1ae545dc",
    "metadata": {},
